--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "nativescript-mht-printer",
-	"version": "1.0.2",
-	"description": "Your awesome NativeScript plugin.",
+	"version": "1.0.3",
+	"description": "Nativescript MeiHengTong MHT Bluetooth Label Printer Plugin",
 	"main": "mht-printer",
 	"typings": "index.d.ts",
 	"nativescript": {
@@ -32,17 +32,14 @@
 		"Android"
 	],
 	"author": {
-		"name": "Your Name",
-		"email": "youremail@yourdomain.com"
+		"name": "Trevize Daneel",
+		"email": "comporell@gmail.com"
 	},
 	"bugs": {
 		"url": "https://github.com/comporell/nativescript-mht-printer/issues"
 	},
 	"license": "Apache-2.0",
 	"homepage": "https://github.com/comporell/nativescript-mht-printer",
-	"dependencies": {
-		"nativescript-permissions": "^1.3.8"
-	},
 	"devDependencies": {
 		"nativescript-dev-webpack": "~1.5.1",
 		"prompt": "^1.0.0",
