--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "nativescript-mht-printer",
-	"version": "1.1.0",
+	"version": "1.1.3",
 	"description": "Nativescript MeiHengTong MHT Bluetooth Label Printer Plugin",
 	"main": "mht-printer",
 	"typings": "index.d.ts",
@@ -45,7 +45,7 @@
 		"prompt": "^1.0.0",
 		"rimraf": "^3.0.2",
 		"semver": "^7.2.1",
-		"tns-core-modules": "^6.5.",
+		"tns-core-modules": "^6.5.0",
 		"tns-platform-declarations": "^6.5.0",
 		"typescript": "~3.8.3"
 	},
